--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-numpy<2
+numpy
 pandas
 scikit-learn
 opencv-python-headless
@@ -6,8 +6,9 @@ matplotlib
 seaborn
 albumentations
 tqdm
-tensorflow==2.15.0
+tensorflow
 Flask==2.2.5
 Pillow
 gunicorn
 google-generativeai
+python-dotenv
